@@ -17,8 +17,8 @@
         <h2 class='stats'>
             {{nums.n_statements}} statements
             <span class='{{c_run}}' onclick='toggle_lines(this, "run")'>{{nums.n_executed}} run</span>
-            <span class='{{c_exc}}' onclick='toggle_lines(this, "exc")'>{{nums.n_excluded}} excluded</span>
             <span class='{{c_mis}}' onclick='toggle_lines(this, "mis")'>{{nums.n_missing}} missing</span>
+            <span class='{{c_exc}}' onclick='toggle_lines(this, "exc")'>{{nums.n_excluded}} excluded</span>
             {% if arcs %}
                 <span class='{{c_par}}' onclick='toggle_lines(this, "par")'>{{n_par}} partial</span>
             {% endif %}
