@@ -23,10 +23,10 @@ class SummaryReporter(Reporter):
         max_name = max([len(cu.name) for cu in self.code_units] + [5])
         fmt_name = "%%- %ds  " % max_name
         fmt_err = "%s   %s: %s\n"
-        header = (fmt_name % "Name") + " Stmts   Exec"
+        header = (fmt_name % "Name") + " Stmts   Miss"
         fmt_coverage = fmt_name + "%6d %6d"
         if self.branches:
-            header += " Branch BrExec"
+            header += " Branch BrPart"
             fmt_coverage += " %6d %6d"
         header += "  Cover"
         fmt_coverage += " %5d%%"
@@ -50,9 +50,9 @@ class SummaryReporter(Reporter):
             try:
                 analysis = self.coverage._analyze(cu)
                 nums = analysis.numbers
-                args = (cu.name, nums.n_statements, nums.n_executed)
+                args = (cu.name, nums.n_statements, nums.n_missing)
                 if self.branches:
-                    args += (nums.n_branches, nums.n_executed_branches)
+                    args += (nums.n_branches, nums.n_missing_branches)
                 args += (nums.pc_covered,)
                 if self.show_missing:
                     args += (analysis.missing_formatted(),)
@@ -67,9 +67,9 @@ class SummaryReporter(Reporter):
 
         if total.n_files > 1:
             outfile.write(rule)
-            args = ("TOTAL", total.n_statements, total.n_executed)
+            args = ("TOTAL", total.n_statements, total.n_missing)
             if self.branches:
-                args += (total.n_branches, total.n_executed_branches)
+                args += (total.n_branches, total.n_missing_branches)
             args += (total.pc_covered,)
             if self.show_missing:
                 args += ("",)
