@@ -6,7 +6,7 @@ run("""
 contains("out/stdout.txt",
         "xxx: 3 4 0 7",
         "\nxxx ",           # The reporting line for xxx
-        " 7      6    85%"  # The reporting data for xxx
+        " 7      1    85%"  # The reporting data for xxx
         )
 doesnt_contain("out/stdout.txt", "No such file or directory")
 clean("out")
